[gd_scene load_steps=28 format=2]

[ext_resource path="res://Scripts/Portal.gd" type="Script" id=1]
[ext_resource path="res://Materials/Portal.tres" type="Material" id=2]
[ext_resource path="res://Textures/portal_inactive.png" type="Texture" id=3]
[ext_resource path="res://Textures/portal.png" type="Texture" id=4]
[ext_resource path="res://Shaders/portal_recursive.shader" type="Shader" id=5]

[sub_resource type="QuadMesh" id=1]
material = ExtResource( 2 )
size = Vector2( 1.7, 2.8 )

[sub_resource type="ShaderMaterial" id=4]
shader = ExtResource( 5 )
shader_param/modulate = Color( 0.560784, 0.560784, 0.560784, 1 )
shader_param/mix_amount = 0.0
shader_param/deform_amount = 0.0
shader_param/deform_speed = null
shader_param/overlay = ExtResource( 4 )
shader_param/inactive_albedo = ExtResource( 3 )

[sub_resource type="QuadMesh" id=5]
material = SubResource( 4 )
size = Vector2( 1.7, 2.8 )

[sub_resource type="CubeMesh" id=6]
material = ExtResource( 2 )
size = Vector3( 1.7, 2.8, 0.2 )

[sub_resource type="Environment" id=7]
tonemap_exposure = 0.01
ssao_enabled = true
adjustment_enabled = true
adjustment_brightness = 7.0

[sub_resource type="Shader" id=8]
code = "shader_type spatial;

uniform vec4 albedo_color : hint_color;

void fragment(){
	ALBEDO = albedo_color.rgb;
}"

[sub_resource type="ShaderMaterial" id=9]
shader = SubResource( 8 )
shader_param/albedo_color = null

[sub_resource type="SphereMesh" id=10]
material = SubResource( 9 )
radius = 0.2
height = 0.4

[sub_resource type="BoxShape" id=11]
extents = Vector3( 0.866, 0.251248, 0.00995805 )

[sub_resource type="BoxShape" id=12]
extents = Vector3( 0.866, 0.15, 0.025 )

[sub_resource type="BoxShape" id=13]
extents = Vector3( 0.866, 0.15, 0.025 )

[sub_resource type="BoxShape" id=14]
extents = Vector3( 1.494, 0.064, 0.025 )

[sub_resource type="BoxShape" id=15]
extents = Vector3( 0.866, 1.53228, 0.025 )

[sub_resource type="BoxShape" id=16]
extents = Vector3( 0.889, 1.54, 0.01 )

[sub_resource type="BoxShape" id=17]
extents = Vector3( 0.569209, 1.12921, 0.621151 )

[sub_resource type="Animation" id=18]
resource_name = "portal_close"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Meshes/Front:material_override:shader_param/mix_amount")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Meshes/Front:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 1, 1, 1 ), Vector3( 0, 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SideRaycasts:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 1, 1, 1 ), Vector3( 0, 0, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("BackRaycasts:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 1, 1, 1 ), Vector3( 0, 0, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Meshes/Front/PortalGlow:light_energy")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.5, 0.0 ]
}

[sub_resource type="Animation" id=19]
resource_name = "portal_fade_in"
tracks/0/type = "value"
tracks/0/path = NodePath("Meshes/Front:material_override:shader_param/mix_amount")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}

[sub_resource type="Animation" id=20]
resource_name = "portal_fade_out"
tracks/0/type = "value"
tracks/0/path = NodePath("Meshes/Front:material_override:shader_param/mix_amount")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[sub_resource type="Animation" id=21]
length = 0.3
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "portal_placed_successfully"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Meshes/Front:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SideRaycasts:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 1 ), Vector3( 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("BackRaycasts:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 1 ), Vector3( 1, 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Meshes/Front/PortalGlow:light_energy")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.5 ]
}

[sub_resource type="SpatialMaterial" id=22]
flags_transparent = true
flags_unshaded = true
vertex_color_use_as_albedo = true
params_billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="QuadMesh" id=23]
material = SubResource( 22 )
size = Vector2( 0.16, 0.16 )

[sub_resource type="Curve" id=24]
_data = [ Vector2( 0.00581396, 0.978409 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.0329546 ), -1.88939, 0.0, 0, 0 ]

[node name="Portal" type="Spatial"]
script = ExtResource( 1 )
color = Color( 1, 0.352941, 0, 1 )

[node name="Meshes" type="Spatial" parent="."]

[node name="Front" type="MeshInstance" parent="Meshes"]
material_override = ExtResource( 2 )
mesh = SubResource( 1 )
material/0 = ExtResource( 2 )

[node name="FrontRecursive" type="MeshInstance" parent="Meshes/Front"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.01 )
layers = 524288
cast_shadow = 0
mesh = SubResource( 5 )
material/0 = null

[node name="PortalGlow" type="OmniLight" parent="Meshes/Front"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 1.30622 )
layers = 9
light_color = Color( 1, 0, 0, 1 )
light_energy = 2.0

[node name="DebugMesh" type="MeshInstance" parent="."]
visible = false
mesh = SubResource( 6 )
material/0 = null

[node name="CamTransform" type="RemoteTransform" parent="."]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0 )
remote_path = NodePath("../Viewport/Camera")

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 5, 5 )
hdr = false

[node name="Camera" type="Camera" parent="Viewport"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0 )
environment = SubResource( 7 )

[node name="DebugMesh" type="MeshInstance" parent="Viewport/Camera"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 9.50897e-08, 0, -1.0877 )
visible = false
mesh = SubResource( 10 )
material/0 = null

[node name="WallColliders" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.0451585 )

[node name="BottomFrame" type="CollisionShape" parent="WallColliders"]
transform = Transform( 1, 0, 0, 0, 0.642788, 0.766045, 0, -0.766045, 0.642788, 0, -1.56284, 0.194063 )
shape = SubResource( 11 )

[node name="BottomFrame2" type="CollisionShape" parent="WallColliders"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.538, 0 )
shape = SubResource( 12 )

[node name="TopFrame" type="CollisionShape" parent="WallColliders"]
transform = Transform( 1, 0, 0, 0, 0.707107, -0.707107, 0, 0.707107, 0.707107, 0, 1.70568, 0.14015 )
shape = SubResource( 13 )

[node name="LeftFrame" type="CollisionShape" parent="WallColliders"]
transform = Transform( -1.15202e-07, -0.707107, 0.707107, 1, -1.62921e-07, 0, 1.15202e-07, 0.707107, 0.707107, -0.911693, 0.0893495, 0 )
shape = SubResource( 14 )

[node name="RightFrame" type="CollisionShape" parent="WallColliders"]
transform = Transform( -1.15202e-07, -0.707107, -0.707107, 1, -1.62921e-07, 0, -1.15202e-07, -0.707107, 0.707107, 0.92039, 0, 0 )
shape = SubResource( 14 )

[node name="BackWall" type="CollisionShape" parent="WallColliders"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.551097 )
shape = SubResource( 15 )

[node name="NonWallColliders" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.0451585 )

[node name="BottomFrame" type="CollisionShape" parent="NonWallColliders"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.5, -0.0632155 )
shape = SubResource( 13 )

[node name="TopFrame" type="CollisionShape" parent="NonWallColliders"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.668, -0.0632155 )
shape = SubResource( 13 )

[node name="LeftFrame" type="CollisionShape" parent="NonWallColliders"]
transform = Transform( -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0, 1, -0.911693, 0.0893495, -0.0632155 )
shape = SubResource( 14 )

[node name="RightFrame" type="CollisionShape" parent="NonWallColliders"]
transform = Transform( -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0, 1, 0.92039, 0, -0.0632155 )
shape = SubResource( 14 )

[node name="PortalArea" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.0150972 )
gravity = 0.0
collision_layer = 9
collision_mask = 9

[node name="CollisionShape" type="CollisionShape" parent="PortalArea"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.120937 )
shape = SubResource( 16 )

[node name="FloorCollisionShape" type="CollisionShape" parent="PortalArea"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.114094, 0.540653 )
shape = SubResource( 17 )
disabled = true

[node name="CeilingCollisionShape" type="CollisionShape" parent="PortalArea"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.114094, -0.254555 )
shape = SubResource( 17 )
disabled = true

[node name="Label" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
text = "N/A"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "portal_open"
anims/portal_close = SubResource( 18 )
anims/portal_fade_in = SubResource( 19 )
anims/portal_fade_out = SubResource( 20 )
anims/portal_open = SubResource( 21 )

[node name="CPURingParticles" type="CPUParticles" parent="."]
transform = Transform( -2.91919e-08, 0.728975, 0, -0.667834, -3.18645e-08, 0, 0, 0, 0.667834, 0, 0, 0.0721928 )
amount = 15
lifetime = 0.5
preprocess = 0.01
lifetime_randomness = 0.2
local_coords = false
mesh = SubResource( 23 )
emission_shape = 3
emission_points = PoolVector3Array( 0, 1, 0, -0.39, 0.981, 0, -0.765, 0.924, 0, -1.111, 0.831, 0, -1.414, 0.707, 0, -1.663, 0.556, 0, -1.848, 0.383, 0, -1.962, 0.195, 0, -2, 0, 0, -1.962, -0.195, 0, -1.848, -0.383, 0, -1.663, -0.556, 0, -1.414, -0.707, 0, -1.111, -0.831, 0, -0.765, -0.924, 0, -0.39, -0.981, 0, 0, -1, 0, 0.39, -0.981, 0, 0.765, -0.924, 0, 1.111, -0.831, 0, 1.414, -0.707, 0, 1.663, -0.556, 0, 1.848, -0.383, 0, 1.962, -0.195, 0, 2, 0, 0, 1.962, 0.195, 0, 1.848, 0.383, 0, 1.663, 0.556, 0, 1.414, 0.707, 0, 1.111, 0.831, 0, 0.765, 0.924, 0, 0.39, 0.981, 0 )
direction = Vector3( 0, 0, 0 )
spread = 90.0
gravity = Vector3( 0, -0.5, 0 )
initial_velocity = 1.0
scale_amount = 0.6
scale_amount_curve = SubResource( 24 )
color = Color( 1, 1, 1, 0.294118 )

[node name="SideRaycasts" type="Spatial" parent="."]

[node name="TopLeftRayCast" type="RayCast" parent="SideRaycasts"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 1, 0 )
enabled = true
cast_to = Vector3( -0.1, 0.1, 0 )
collision_mask = 13

[node name="TopRightRayCast" type="RayCast" parent="SideRaycasts"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 1, 0 )
enabled = true
cast_to = Vector3( 0.1, 0.1, 0 )
collision_mask = 13

[node name="BottomLeftRayCast" type="RayCast" parent="SideRaycasts"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, -1, 0 )
enabled = true
cast_to = Vector3( -0.1, -0.1, 0 )
collision_mask = 13

[node name="BottomRightRayCast" type="RayCast" parent="SideRaycasts"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, -1, 0 )
enabled = true
cast_to = Vector3( 0.1, -0.1, 0 )
collision_mask = 13

[node name="BackRaycasts" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.0823703 )

[node name="TopLeftRayCast" type="RayCast" parent="BackRaycasts"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 1, 0 )
enabled = true
cast_to = Vector3( 0, 0, -0.33 )
collision_mask = 9

[node name="TopRightRayCast" type="RayCast" parent="BackRaycasts"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 1, 0 )
enabled = true
cast_to = Vector3( 0, 0, -0.33 )
collision_mask = 9

[node name="BottomLeftRayCast" type="RayCast" parent="BackRaycasts"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, -1, 0 )
enabled = true
cast_to = Vector3( 0, 0, -0.33 )
collision_mask = 9

[node name="BottomRightRayCast" type="RayCast" parent="BackRaycasts"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, -1, 0 )
enabled = true
cast_to = Vector3( 0, 0, -0.33 )
collision_mask = 9

[connection signal="body_entered" from="PortalArea" to="." method="_on_body_entered"]
[connection signal="body_exited" from="PortalArea" to="." method="_on_body_exited"]
